12-1-service-dns.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-udp
  namespace: pihole-system
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole
spec:
  type: LoadBalancer
  loadBalancerIP: 10.10.100.11
  ports:
    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: 53
  externalTrafficPolicy: Local
  selector:
    app: pihole
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-tcp
  namespace: pihole-system
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole
spec:
  type: LoadBalancer
  loadBalancerIP: 10.10.100.11
  ports:
    - name: dns-tcp
      port: 53
      protocol: TCP
      targetPort: 53
  externalTrafficPolicy: Local
  selector:
    app: pihole
