12-2-service-web.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-web
  namespace: pihole-system
spec:
  selector:
    app: pihole
  ports:
  - name: http
    targetPort: 80
    port: 80
